feature-be/world-view: Updated Coordinate, DrivingRoute with JourneyState to use proper start & End waypoints.